List of stars now centers correctly on PageSolarSystems -- need to figure out filters and fast, too much data; music does not change on PageSolarSystems -- I broke something when setting up Redux

--- a/src/styles/ListStars.css
+++ b/src/styles/ListStars.css
@@ -6,18 +6,20 @@
   justify-content: center;
   list-style: none;
   flex-wrap: wrap;
-  min-width: 288px;
-  width: 90%
+  min-width: 288px
 }
 
 #ul-star-list li {
   margin: 2px;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   font-size: 10px;
   height: 80px;
   width: 80px;
   background: navy;
   overflow: hidden;
+  border-radius: 4px;
   transition: background 0.15s
 }
 
