--- a/src/styles/PageSolarSystems.css
+++ b/src/styles/PageSolarSystems.css
@@ -1,3 +1,6 @@
 #main-solarsystems {
-    flex: 1 0 auto
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center
   }
